--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="parent">
         <div class="div1"><h1>Rainbow Cosmos</h1></div>
         <div class="div2">
-            <a href="../RCosmos/Index.html">Home</a>
+            <a href="../RCosmos/index.html">Home</a>
             <a href="../RCosmos/About.html">About Us</a>
             <a href="../RCosmos/Commissions.html">Commissions Page</a>
             <a href="../RCosmos/Denise.html">About Denise</a>
