--- a/Commissions.html
+++ b/Commissions.html
@@ -8,10 +8,10 @@
     <div class="parent">
         <div class="div1"><h1>Commissions</h1></div>
         <div class="div2">
-          <a href="../RCosmos/index.html">Home</a>
-            <a href="../RCosmos/About.html">About Us</a>
-            <a href="../RCosmos/Commissions.html">Commissions Page</a>
-            <a href="../RCosmos/Denise.html">About Denise</a>
+            <a href="../index.html">Home</a>
+            <a href="../About.html">About Us</a>
+            <a href="../Commissions.html">Commissions Page</a>
+            <a href="../Denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><p>Would you like to commission us for custom stuff? Contact us on our Instagram below or send us an email!</p>
           <form action="/action_page.php">
