--- a/About.html
+++ b/About.html
@@ -13,7 +13,9 @@
             <a href="../Commissions.html">Commissions Page</a>
             <a href="../Denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
-        <div class="div3"><p>body wip</p></div>
+        <div class="div3">
+            <h2>About Us</h2>
+            <p>body wip</p></div>
         <div class="div4"><p>Footer wip</p></div>
     </body>
     </div>
