--- a/about-denise.html
+++ b/about-denise.html
@@ -3,19 +3,20 @@
     <link rel="stylesheet" href="styles.css">
     <head>
         <title>Rainbow Cosmos</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
         </head>
         <body>
-    <div class="parent">
         <div class="div1"><h1>About Denise</h1></div>
         <div class="div2">
-            <a href="../index.html">Home</a>
-            <a href="../About.html">About Us</a>
-            <a href="../Commissions.html">Commissions Page</a>
-            <a href="../Denise.html">About Denise</a>
+            <a href="../RCosmos/index.html">Home</a>
+            <a href="../RCosmos/about-page.html">About Us</a>
+            <a href="../RCosmos/comms.html">Commissions Page</a>
+            <a href="../RCosmos/about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
             <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health</p></div>
         <div class="div4"><p>Footer wip</p></div>
     </body>
-    </div>
 </html>
