--- a/comms.html
+++ b/comms.html
@@ -3,15 +3,17 @@
     <link rel="stylesheet" href="styles.css">
     <head>
         <title>Rainbow Cosmos</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
         </head>
         <body>
-    <div class="parent">
         <div class="div1"><h1>Commissions</h1></div>
         <div class="div2">
-            <a href="../index.html">Home</a>
-            <a href="../About.html">About Us</a>
-            <a href="../Commissions.html">Commissions Page</a>
-            <a href="../Denise.html">About Denise</a>
+            <a href="../RCosmos/index.html">Home</a>
+            <a href="../RCosmos/about-page.html">About Us</a>
+            <a href="../RCosmos/comms.html">Commissions Page</a>
+            <a href="../RCosmos/about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><p>Would you like to commission us for custom stuff? Contact us on our Instagram below or send us an email!</p>
           <form action="/action_page.php">
@@ -23,5 +25,4 @@
             </form></div>
         <div class="div4"><p>Footer wip</p></div>
     </body>
-    </div>
 </html>
