--- a/comms.html
+++ b/comms.html
@@ -10,10 +10,10 @@
         <body>
         <div class="div1"><h1>Commissions</h1></div>
         <div class="div2">
-            <a href="../RCosmos/index.html">Home</a>
-            <a href="../RCosmos/about-page.html">About Us</a>
-            <a href="../RCosmos/comms.html">Commissions Page</a>
-            <a href="../RCosmos/about-denise.html">About Denise</a>
+            <a href="../index.html">Home</a>
+            <a href="../about-page.html">About Us</a>
+            <a href="../comms.html">Commissions Page</a>
+            <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><p>Would you like to commission us for custom stuff? Contact us on our Instagram below or send us an email!</p>
           <form action="/action_page.php">
