--- a/about-denise.html
+++ b/about-denise.html
@@ -10,10 +10,10 @@
         <body>
         <div class="div1"><h1>About Denise</h1></div>
         <div class="div2">
-            <a href="../RCosmos/index.html">Home</a>
-            <a href="../RCosmos/about-page.html">About Us</a>
-            <a href="../RCosmos/comms.html">Commissions Page</a>
-            <a href="../RCosmos/about-denise.html">About Denise</a>
+            <a href="../index.html">Home</a>
+            <a href="../about-page.html">About Us</a>
+            <a href="../comms.html">Commissions Page</a>
+            <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
             <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health</p></div>
