--- a/about-denise.html
+++ b/about-denise.html
@@ -12,7 +12,7 @@
         <div class="div2">
             <a href="../index.html">Home</a>
             <a href="../about-page.html">About Us</a>
-            <a href="../comms.html">Commissions Page</a>
+            <a href="../gallery.html">Gallery</a>
             <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
