--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
         <div class="div2">
             <a href="../index.html">Home</a>
             <a href="../about-page.html">About Us</a>
-            <a href="../comms.html">Commissions Page</a>
+            <a href="../gallery.html">Gallery</a>
             <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3"><p>Would you like to commission us for custom stuff? Contact us on our Instagram below or send us an email!</p>
