--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
             <a href="../gallery.html">Gallery</a>
             <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
-        <div class="div3"><h2>Our Vision</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <br></br>
+      <div class="div3"><h2>Our Vision</h2>
+            <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality. Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
+            <h2>A Sight to Behold</h2>
+            <p>Have a look at some samples that we have in store for you.</p>
+            <img src="../RCosmos/images/r2.jpg" alt="Flowers" width="400px" height="auto">
+            <img src="../RCosmos/images/r1.jpg" alt="Quokka" width="400px" height="auto">
+            <img src="../RCosmos/images/r3.jpg" alt="Pretty Colors" width="400px" height="auto">       
+          <br></br>
         </div>
         <div class="div4"><p>Footer wip</p>
     </body>
