--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality. Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
             <h2>A Sight to Behold</h2>
             <p>Have a look at some samples that we have in store for you.</p>
-            <img src="../RCosmos/images/r2.jpg" alt="Flowers" width="400px" height="auto">
-            <img src="../RCosmos/images/r1.jpg" alt="Quokka" width="400px" height="auto">
-            <img src="../RCosmos/images/r3.jpg" alt="Pretty Colors" width="400px" height="auto">       
+            <img src="../images/r2.jpg" alt="Flowers" width="400px" height="auto">
+            <img src="../images/r1.jpg" alt="Quokka" width="400px" height="auto">
+            <img src="../images/r3.jpg" alt="Pretty Colors" width="400px" height="auto">       
           <br></br>
         </div>
         <div class="div4"><p>Footer wip</p>
