--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
             <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
       <div class="div3"><h2>Our Vision</h2>
-            <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality. Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
+            <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality.</p> 
+            <p>Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
             <h2>A Sight to Behold</h2>
             <p>Have a look at some samples that we have in store for you.</p>
-            <img src="../images/r1.jpg" alt="Quokka" width="400px" height="auto">
-            <img src="../images/r2.jpg" alt="Flowers" width="400px" height="auto">
-            <img src="../images/r3.jpg" alt="Pretty Colors" width="400px" height="auto">       
-            <img src="../images/r4.jpg" alt="Fun" width="400px" height="auto">
-            <img src="../images/r5.jpg" alt="Made with Care" width="400px" height="auto">
+            <img src="../images/r1.jpg" alt="Quokka" width="300px" height="auto">
+            <img src="../images/r2.jpg" alt="Flowers" width="300px" height="auto">
+            <img src="../images/r3.jpg" alt="Pretty Colors" width="300px" height="auto">       
+            <img src="../images/r4.jpg" alt="Fun" width="300px" height="auto">
+            <img src="../images/r5.jpg" alt="Made with Care" width="300px" height="auto">
           <br></br>
         </div>
         <div class="div4"><p>Footer wip</p>
