--- a/gallery.html
+++ b/gallery.html
@@ -13,16 +13,8 @@
             <a href="../index.html">Home</a>
             <a href="../about-page.html">About Us</a>
             <a href="../gallery.html">Gallery</a>
-            <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
-        <div class="div3"><p>Would you like to commission us for custom stuff? Contact us on our Instagram below or send us an email!</p>
-          <form action="/action_page.php">
-              <label for="fname">Name:</label><br>
-              <input type="text" id="fname" name="fname" value="John"><br>
-              <label for="lname">Commission Details:</label><br>
-              <input type="text" id="commission" name="commission" value="Add details here."><br><br>
-              <input type="submit" value="Submit">
-            </form></div>
+        <div class="div3"><p>Under Construction</p>
         <div class="div4"><p>Footer wip</p></div>
     </body>
 </html>
