--- a/about-page.html
+++ b/about-page.html
@@ -16,9 +16,9 @@
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
         <div class="div3">
             <h2>About Us</h2>
-            <p>Under Construction</p></div>
+            <p>Under Construction</p>
         <h2>About our Founder</h2>
-        <div class="div3"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
             <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health</p></div>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Coool Stuff</p></div></div>
     </body>
