--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <div class="div3"><h2>Our Vision</h2>
             <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality.</p> 
             <p>Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
-            <h2>A Sight to Behold</h2>
+            <h2>A Sight to Behold</h2>            
+    <div class ="imgcenter">
             <p>Have a look at some samples that we have in store for you.</p>
             <img src="../images/r1.jpg" alt="Quokka" width="300px" height="auto">
             <img src="../images/r2.jpg" alt="Flowers" width="300px" height="auto">
