--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <div class="div3"><h2>Our Vision</h2>
             <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality.</p> 
             <p>Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
-            <h2>A Sight to Behold</h2>            
-    <div class ="imgcenter">
+            <h2>A Sight to Behold</h2>
             <p>Have a look at some samples that we have in store for you.</p>
-            <img src="../images/r1.jpg" alt="Quokka" width="200px" height="auto">
-            <img src="../images/r2.jpg" alt="Flowers" width="200px" height="auto">
-            <img src="../images/r3.jpg" alt="Pretty Colors" width="200px" height="auto">       
-            <img src="../images/r4.jpg" alt="Fun" width="200px" height="auto">
-            <img src="../images/r5.jpg" alt="Made with Care" width="200px" height="auto">
+    <div class ="imgcenter">
+            <img src="../images/r1.jpg" alt="Quokka" width="300px" height="auto">
+            <img src="../images/r2.jpg" alt="Flowers" width="300px" height="auto">
+            <img src="../images/r3.jpg" alt="Pretty Colors" width="300px" height="auto">       
+            <img src="../images/r4.jpg" alt="Under the Sea" width="300px" height="auto">
+            <img src="../images/r5.jpg" alt="Shells" width="300px" height="auto">
           <br></br>
         </d
         </div>
