--- a/about-page.html
+++ b/about-page.html
@@ -18,7 +18,9 @@
             <h2>About Us</h2>
             <p>Under Construction</p>
         <h2>About our Founder</h2>
+            <div class="imgcenter">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
+            </div>
             <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health</p></div>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Coool Stuff</p></div></div>
     </body>
