--- a/about-denise.html
+++ b/about-denise.html
@@ -15,8 +15,8 @@
             <a href="../gallery.html">Gallery</a>
             <a href="../about-denise.html">About Denise</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
-        <div class="div3"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
-            <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health</p></div>
+        <div class="div3"><img src="../images/denise.jpg" alt="Denise">
+            <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health. She is based in Cranbourne West, Victoria.</p></div>
         <div class="div4"><p>Footer wip</p></div>
     </body>
 </html>
