--- a/about-page.html
+++ b/about-page.html
@@ -19,9 +19,9 @@
             <p>Under Construction</p>
         <h2>About our Founder</h2>
             <div class="imgcenter">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYqb1UmIpLfTiwp9IEeeKwTZpYVXIEWBQnTA&s" alt="Denise">
+            <img src="../images/denise.jpg" alt="Denise">
             </div>
-            <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health</p></div>
+            <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health. She is based in Cranbourne West, Victoria.</p></div>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Coool Stuff</p></div></div>
     </body>
 
