--- a/about-page.html
+++ b/about-page.html
@@ -22,7 +22,7 @@
             <img src="../images/denise.jpg" alt="Denise" width="400px" height="auto">
             </div>
             <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health. She is based in Cranbourne West, Victoria.</p></div>
-        <div class="div4"><div><p>Copyrighted &copy; 2025 - Coool Stuff</p></div></div>
+        <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
     </body>
 
 </html>
