--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <br></br>
         </d
         </div>
-        <div class="div4"><p>Footer wip</p>
+        <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
     </body>
     </div>
 </html>
