--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="../about-page.html">About Us</a>
             <a href="../gallery.html">Gallery</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
+            <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div>
       <div class="div3"><h2>Our Vision</h2>
             <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality.</p> 
             <p>Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
