--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,7 @@
             <a href="../about-page.html">About Us</a>
             <a href="../gallery.html">Gallery</a>
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
+            <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div> 
         <div class="div3"><p>Under Construction</p>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
     </body>
