--- a/about-page.html
+++ b/about-page.html
@@ -13,7 +13,7 @@
             <a href="../index.html">Home</a>
             <a href="../about-page.html">About Us</a>
             <a href="../gallery.html">Gallery</a>
-            <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a></div>
+            <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a>
             <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div>
         <div class="div3">
             <h2>About Us</h2>
