--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a>
             <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div>
       <div class="div3"><h2>Our Vision</h2>
-            <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality.</p> 
-            <p>Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
+            <p>Rainbow Cosmos is a handmade passion project that aims to turn imagination in to reality.<br> 
+            Using clay as a medium, Rainbow Cosmos weaves to life creations that will bring you joy.</p>
             <h2>A Sight to Behold</h2>
             <p>Have a look at some samples that we have in store for you.</p>
     <div class ="imgcenter">
