--- a/about-page.html
+++ b/about-page.html
@@ -17,12 +17,15 @@
             <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div>
         <div class="div3">
             <h2>About Us</h2>
-            <p>Under Construction</p>
+            <p>Rainbow Cosmos is the passion project of Denise Marie Fraginal come to life.</p>
         <h2>About our Founder</h2>
             <div class="imgcenter">
             <img src="../images/denise.jpg" alt="Denise" width="400px" height="auto">
             </div>
-            <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health. She is based in Cranbourne West, Victoria.</p></div>
+            <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health. <br> 
+            While she works in the Medical Field in the day, she moonlights as Rainbow Cosmos' proprietor. <br>
+            She enjoys a good book, walks around the neighborhood, and the occasional Murder Mystery Procedural <br>
+            Denise is based in Cranbourne West, Victoria.</p></div>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
     </body>
 
