--- a/about-page.html
+++ b/about-page.html
@@ -26,6 +26,8 @@
             While she works in the Medical Field in the day, she moonlights as Rainbow Cosmos' proprietor. <br>
             She enjoys a good book, walks around the neighborhood, and the occasional Murder Mystery Procedural <br>
             Denise is based in Cranbourne West, Victoria.</p></div>
+        <h2>Contact Us</h2>
+            <p>Follow us on our Social Media above or send us an email at rbowcosmos@gmail.com<br></p>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
     </body>
 
