--- a/about-page.html
+++ b/about-page.html
@@ -25,9 +25,9 @@
             <p>Denise Marie Fraginal is a Nurse Practictioner for Western Health. <br> 
             While she works in the Medical Field in the day, she moonlights as Rainbow Cosmos' proprietor. <br>
             She enjoys a good book, walks around the neighborhood, and the occasional Murder Mystery Procedural <br>
-            Denise is based in Cranbourne West, Victoria.</p></div>
+            Denise is based in Cranbourne West, Victoria.</p>
         <h2>Contact Us</h2>
-            <p>Follow us on our Social Media above or send us an email at rbowcosmos@gmail.com<br></p>
+            <p>Follow us on our Social Media above or send us an email at rbowcosmos@gmail.com<br></p></div>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
     </body>
 
