--- a/gallery.html
+++ b/gallery.html
@@ -17,5 +17,7 @@
             <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div> 
         <div class="div3"><p>Under Construction</p>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
+            <!-- Support Board -->
+<script id="chat-init" src="https://cloud.board.support/account/js/init.js?id=1245688347"></script>
     </body>
 </html>
