--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,6 @@
         <div class="div3"><p>Under Construction</p>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
             <!-- Support Board -->
-<script id="chat-init" src="https://cloud.board.support/account/js/init.js?id=1245688347"></script>
+<script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=10524097"></script>
     </body>
 </html>
