--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,11 @@
         <div class="div3"><p>Under Construction</p>
         <div class="div4"><div><p>Copyrighted &copy; 2025 - Denise Fraginal</p></div></div>
 <!-- Nexleon Helpdesk -->
+<script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=10524097"></script>
+<!-- Nexleon Helpdesk -->
 <script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=10524097&mode=tickets"></script>
     </body>
 </html>
+
 
 
