--- a/gallery-test.html
+++ b/gallery-test.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="styles.css">
     <head>
         <title>Rainbow Cosmos</title>
+        </head>
+        <body>
           <!-- Nexleon Helpdesk -->
 <script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=10524097&mode=tickets"></script>
     </body>
+
 </html>
