--- a/rtesting.html
+++ b/rtesting.html
@@ -1,2 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Rainbow Cosmos</title>
+        </head>
+        <body>
 <!-- Nexleon Helpdesk -->
-<script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=10524097"></script>
+<script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=11576522&mode=tickets"></script>
+    </body>
+
+</html>
