--- a/testdouble.html
+++ b/testdouble.html
@@ -16,8 +16,7 @@
             <a href="https://www.instagram.com/rbowcosmos?igsh=dmF3dTJieDRyc2k3/">Follow us on Instagram!</a>
             <a href="https://www.facebook.com/profile.php?id=61556022457676">Find us on Facebook!</a></div> 
         <div class="div3"><p>Under Construction</p>
-            <!-- Nexleon Helpdesk -->
 <!-- Nexleon Helpdesk -->
-<script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=11098147&mode=tickets"></script>
+<script id="chat-init" src="https://hd.nexleon.com/account/js/init.js?id=16264597"></script>
     </body>
 </html>
